--- a/index.css
+++ b/index.css
@@ -1,20 +1,22 @@
 body{
 	background-color: hsl(212, 45%, 89%);
+	max-width: 410px;
+	width: 80%;
+	margin:auto;
 }
 
 .index{
-	font-family: outfit;
+	font-family: Outfit;
 	font-size: 15px;
 	text-align: center;
 	background-color: hsl(0, 0%, 100%);
-	width: 230px;
-	height: 350px;
+    height: 350px;
 	border-radius: 10px;
-	margin:100px auto;
+	margin: 90px;
 }
 	
 
-.bold{
+h1{
 	font-weight: 700;
 	color: hsl(218, 44%, 22%);
 	text-align: center;
@@ -24,7 +26,7 @@ body{
 	margin-left: 10%;
 }
 
-.light{
+p{
     font-size: 11px;
     color: hsl(220, 15%, 55%);
     text-align: center;
@@ -33,7 +35,8 @@ body{
 }
 
 img{
-	width: 210px;
+	max-width: 210px;
+	width: 90%;
 	margin:10px;
 	border-radius: 10px;
 }
